--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ MAIL_HOST = sandbox.smtp.mailtrap.io
 MAIL_PORT = 465
 MAIL_USER = bd5a68e5ddd81e
 MAIL_PASSWORD = b6217ae4e7457f
-DEFAULT_MAIL_FROM = alaaproschool@gmail.com
-APP_NAME = Exchangers
+DEFAULT_MAIL_FROM = mohamedalaatarab@gmail.com
+APP_NAME = Ajirni.com
 
 
 DOMAINE = http://localhost:3000
